samples/_failures_safe/1761515095_d7f39e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b05a681.c: In function ‘main’:
./samples/SAFE/__tmp_3b05a681.c:166:16: error: missing terminating " character
  166 |         printf("Error tokenizing expression\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3b05a681.c:166:9: error: expected expression at end of input
  166 |         printf("Error tokenizing expression\n
      |         ^~~~~~
./samples/SAFE/__tmp_3b05a681.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b05a681.c:166:9: error: expected declaration or statement at end of input
